hphp/hack/test/typecheck/class_meth14.php.exp
File "class_meth14.php", line 6, characters 16-26:
`class_meth` with `self::class` does not preserve class calling context.
Use `static::class`, or `Whoops::class` explicitly (Naming[2111])
